[package]
name = "rscontainer"
version = "0.1.0"
authors = ["Yves D. <yvd-dev@outlook.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Manages dependencies between objects."
keywords = ["dependency", "injection", "service", "container", "manager"]
categories = ["config", "data-structures", "memory-management", "rust-patterns"]
homepage = "https://github.com/yvesdum/rscontainer"
repository = "https://github.com/yvesdum/rscontainer"
readme = "README.md"

[dependencies]
fnv = "1.0.7"